# mosque

./: calendarread.py  prayer_timetable_2025.csv  pyproject.toml
