[project]
name = "sahatcalendar"
version = "0.1.0"
description = ""
authors = [
    {name = "laithm",email = "laith.masri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "tabula (>=1.0.5,<2.0.0)",
    "tabula-py (>=2.10.0,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
